<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>at</groupId>
	<artifactId>vautotest</artifactId>
	<version>1.2.3</version>
	<dependencies>
		<dependency>
			<groupId>org.javassist</groupId>
			<artifactId>javassist</artifactId>
			<version>3.20.0-GA</version>
		</dependency>
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4.7</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-server</artifactId>
			<version>2.47.0</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>2.47.0</version>
		</dependency>
		<dependency>
			<groupId>cglib</groupId>
			<artifactId>cglib-nodep</artifactId>
			<version>3.1</version>
		</dependency>
		<dependency>
			<groupId>net.sf.json-lib</groupId>
			<artifactId>json-lib</artifactId>
			<version>2.4</version>
			<classifier>jdk15</classifier>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.8.3</version>
		</dependency>
		<dependency>
			<groupId>net.sf.ezmorph</groupId>
			<artifactId>ezmorph</artifactId>
			<version>1.0.6</version>
		</dependency>
		<dependency>
			<groupId>com.sikulix</groupId>
			<artifactId>sikulixapi</artifactId>
			<version>1.1.0</version>
		</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.9.10</version>
		</dependency>
	</dependencies>
	<properties>
		<maven.build.timestamp.format>yyyy-MM-dd_HH-mm-ss</maven.build.timestamp.format>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<mavenbuildts>${maven.build.timestamp}</mavenbuildts>
		<mavensurefirereports>surefirereport</mavensurefirereports>
		<surefiredetails>${project.basedir}/${mavensurefirereports}/build_${mavenbuildts}/details</surefiredetails>
		<surefireoverall>${project.basedir}/${mavensurefirereports}/build_${mavenbuildts}/overall</surefireoverall>
		<my.forkCount>1</my.forkCount>
		<my.skipSurefireReport>false</my.skipSurefireReport>
		<my.disableXmlReport>false</my.disableXmlReport>
		<my.redirectTestOutputToFile>true</my.redirectTestOutputToFile>
		<my.reporttitle>Testing Report</my.reporttitle>
	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<compilerArguments>
						<extdirs>${project.basedir}/ext-deps</extdirs>
					</compilerArguments>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.7</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.shared</groupId>
						<artifactId>maven-filtering</artifactId>
						<version>3.0.0</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>copy-resources</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/target/classes</outputDirectory>
							<resources>
								<resource>
									<directory>${basedir}/src/test/java</directory>
								</resource>
								<resource>
									<directory>${basedir}/src/main/resources</directory>
								</resource>
								<resource>
									<directory>${basedir}/src/main/resources</directory>
									<includes>
										<include>**/*.properties</include>
									</includes>
									<filtering>true</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-extdeps</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/target/classes</outputDirectory>
							<resources>
								<resource>
									<directory>${basedir}/ext-deps/classes</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-doc</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/target/classes/doc</outputDirectory>
							<resources>
								<resource>
									<directory>${basedir}/doc</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19</version>
				<configuration>

					<forkCount>${my.forkCount}</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>-Xmx256m -XX:MaxPermSize=32m</argLine>
					<parallel>classes</parallel>
					<threadCount>1</threadCount>
					<perCoreThreadCount>false</perCoreThreadCount>
					<testFailureIgnore>true</testFailureIgnore>
					<disableXmlReport>${my.disableXmlReport}</disableXmlReport>
					<reportsDirectory>${surefiredetails}</reportsDirectory>
					<redirectTestOutputToFile>${my.redirectTestOutputToFile}</redirectTestOutputToFile>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.19</version>
				<configuration>
					<reportsDirectories>
						<reportsDirectory>${surefiredetails}</reportsDirectory>
					</reportsDirectories>
					<outputName>${my.reporttitle}</outputName>
					<outputDirectory>${surefireoverall}</outputDirectory>
					<linkXRef>false</linkXRef>
					<showSuccess>true</showSuccess>
					<aggregate>false</aggregate>
					<skipSurefireReport>${my.skipSurefireReport}</skipSurefireReport>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<name>vautotest</name>
	<description></description>
</project>